--- a/packages/igx-templates/igx-ts/projects/empty/files/src/app/home/home.scss
+++ b/packages/igx-templates/igx-ts/projects/empty/files/src/app/home/home.scss
@@ -7,14 +7,23 @@
   flex-flow: column nowrap;
   justify-content: stretch;
   align-items: center;
-  padding: 40px 24px 40px 24px;
+  padding: 24px;
+  box-sizing: border-box;
   overflow: inherit;
 }
 
 @include b(content) {
   @extend %content-display;
 
+  h4 {
+    font-size: 28px;
+    font-weight: 400;
+    line-height: 1.4;
+    max-width: 1120px;
+  }
+
   p {
+    font-size: 16px;
     margin: 0px 0px 8px 0px;
 
     &:nth-last-child(2) {
@@ -22,46 +31,68 @@
     }
   }
 
+  @include e(link) {
+    font-size: 16px;
+  }
+
   @include e(header) {
     color: color($default-palette, "primary");
+    font-size: 80px;
+    font-weight: 300;
+    line-height: 1.2;
   }
 
   @include e(subject) {
+    margin-top: 0;
     margin-bottom: 16px;
   }
 
   @include e(container, $m: wide) {
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
     justify-content: center;
+    gap: 24px;
   }
 
   @include e(link, $m: github) {
-    position: relative;
+    font-size: 16px;
+  }
+
+  @include e(github-item) {
     display: flex;
-    flex-flow: row;
+    flex-flow: row nowrap;
     align-items: center;
+  }
 
-    &:not(:first-child) {
-      margin-left: 24px;
-    }
-
-    &::before {
-      position: relative;
-      display: block;
-      content: "";
-      min-width: 24px;
-      min-height: 24px;
-      background-image: url("../../assets/GitHub/github.svg");
-      background-size: 24px 24px;
-      background-repeat: no-repeat;
-      margin-right: 8px;
-    }
+  @include e(github-icon) {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+    flex: 0 0 24px;
+    color: #000;
   }
 
   @include e(image) {
-    margin-bottom: 48px;
-    max-height: 480px;
+    display: block;
+    width: 500px;
+    height: 350px;
+    margin-bottom: 32px;
     max-width: 100%;
+    object-fit: contain;
+  }
+
+  @media (max-width: 768px) {
+    @include e(header) {
+      font-size: 40px;
+    }
+
+    h4 {
+      font-size: 20px;
+    }
+
+    @include e(image) {
+      width: 100%;
+      height: 240px;
+    }
   }
 }
